# skourios

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  rust-toolchain.toml
.devcontainer/: devcontainer.json
crates/root_task/: Cargo.toml
crates/root_task/src/: allocator.rs  main.rs
crates/tut__untyped/: Cargo.toml
docker/: Dockerfile
